apps/report-ms/overlays/prod/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: report-ms
spec:
  hosts:
    - api.auraenterprise.solutions
  gateways:
    - istio-ingress/public-gateway
  http:
    - route:
        - destination:
            host: report-ms.apps-prod.svc.cluster.local
            port:
              number: 8080
